--- a/rule/Clash/Reject/Reject.yaml
+++ b/rule/Clash/Reject/Reject.yaml
@@ -63,3 +63,4 @@ payload:
   - DOMAIN,registeridm.com
   - DOMAIN,www.registeridm.com
   - DOMAIN,secure.registeridm.com
+  - DOMAIN-SUFFIX,internetdownloadmanager.com
