--- a/rule/Clash/PrivateTracker/PrivateTracker.yaml
+++ b/rule/Clash/PrivateTracker/PrivateTracker.yaml
@@ -534,3 +534,4 @@ payload:
   - DOMAIN,hudbt.hust.edu.cn
   - DOMAIN,pt.btschool.club
   - DOMAIN,pt.xingyungept.org
+  - DOMAIN-SUFFIX,qingwapt.org
