--- a/rule/Clash/MovieTV/MovieTV.yaml
+++ b/rule/Clash/MovieTV/MovieTV.yaml
@@ -30,3 +30,4 @@ payload:
   - IP-CIDR,140.83.51.221/32,no-resolve
   - IP-CIDR,130.61.137.163/32,no-resolve
   - IP-CIDR,139.185.47.25/32,no-resolve
+  - DOMAIN,rfc.uhdnow.com
