--- a/rule/Clash/PrivateTracker/PrivateTracker.yaml
+++ b/rule/Clash/PrivateTracker/PrivateTracker.yaml
@@ -534,4 +534,6 @@ payload:
   - DOMAIN,hudbt.hust.edu.cn
   - DOMAIN,pt.btschool.club
   - DOMAIN,pt.xingyungept.org
+  - DOMAIN,img.xingyungept.org
+  - DOMAIN,img.xingyungept.cn
   - DOMAIN-SUFFIX,qingwapt.org
