--- a/rule/Clash/PrivateTracker/PrivateTracker.yaml
+++ b/rule/Clash/PrivateTracker/PrivateTracker.yaml
@@ -505,6 +505,7 @@ payload:
   - DOMAIN-SUFFIX,star-space.net
   - DOMAIN-SUFFIX,ubits.club
   - DOMAIN-SUFFIX,uhd100.com
+  - DOMAIN-SUFFIX,ptskit.com
   - DOMAIN-SUFFIX,ptskit.org
   - DOMAIN-SUFFIX,playletpt.xyz
   - DOMAIN-SUFFIX,yemapt.org
