--- a/rule/Clash/AI/AI.yaml
+++ b/rule/Clash/AI/AI.yaml
@@ -16,6 +16,7 @@ payload:
   - DOMAIN-SUFFIX,meta.ai
   - DOMAIN-SUFFIX,apple-relay.apple.com
   - DOMAIN-SUFFIX,apple-relay.cloudflare.com
+  - DOMAIN-SUFFIX,humb.apple.com
   - DOMAIN,guzzoni.smoot.apple.com
   - DOMAIN-SUFFIX,poe.com
   - DOMAIN-SUFFIX,claudeusercontent.com
