--- a/rule/Clash/Direct/Direct.yaml
+++ b/rule/Clash/Direct/Direct.yaml
@@ -80,3 +80,4 @@ payload:
   - IP-CIDR,38.207.173.0/22,no-resolve
   - DOMAIN,tls-desktop.dingtalk.com
   - DOMAIN,api.cloudflare.com
+  - DOMAIN,fwa.lifesizecloud.com
