--- a/config/surge带wg，s5回家配置.conf
+++ b/config/surge带wg，s5回家配置.conf
@@ -115,7 +115,7 @@ Usenet = select,节点选择,全球直连,include-other-group="机场",icon-url=
 IP-CIDR,192.168.1.0/24,家庭组网,no-resolve
 RULE-SET,https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Surge/Reject/Reject.list,REJECT-NO-DROP,extended-matching,pre-matching,update-interval=86400
 #如果打开贴吧微博等APP刷新不出内容，可以把去广告规则Anti-AD可以注释掉
-DOMAIN-SET,https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Surge/Anti-AD/Anti-AD.list,REJECT-NO-DROP,extended-matching,pre-matching,update-interval=86400
+#DOMAIN-SET,https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Surge/Anti-AD/Anti-AD.list,REJECT-NO-DROP,extended-matching,pre-matching,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Surge/DouYin/DouYin.list,DIRECT,extended-matching,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Surge/Proxy/Proxy.list,节点选择,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GitHub/GitHub.list,节点选择,update-interval=86400
@@ -264,9 +264,9 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ByteDance/ByteDance.list,全球直连,extended-matching,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Surge/Usenet/Usenet.list,Usenet,update-interval=86400
 #SRC-IP-CIDR,192.168.1.131/32,DIRECT 设置一下Nas IP，SRCIP规则后的NAS所有请求都走直连，PT下载不会走代理，该规则建议网关分流用
-SRC-IP,192.168.1.131/32,DIRECT
-SRC-IP,192.168.1.132/32,DIRECT
-SRC-IP,192.168.1.189/32,DIRECT
+#SRC-IP,192.168.1.131/32,DIRECT
+#SRC-IP,192.168.1.132/32,DIRECT
+#SRC-IP,192.168.1.189/32,DIRECT
 RULE-SET,https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Surge/PrivateTracker/PrivateTracker.list,PT下载,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,全球直连,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Surge/Direct/Direct.list,全球直连,update-interval=86400
