--- a/config/surge.conf
+++ b/config/surge.conf
@@ -72,6 +72,9 @@ hide-udp = 0
 # pattern 匹配通配符的请求
 keyword-filter-type = whitelist
 # > Ponte局域网
+#参数 block-quic，该参数用于全局覆盖是否阻止 QUIC 流量的行为,默认全部允许
+#block-quic = always-allow
+
 
 [Proxy]
 Direct = direct
