--- a/config/surge.conf
+++ b/config/surge.conf
@@ -77,7 +77,8 @@ keyword-filter-type = whitelist
 
 
 [Proxy]
-Direct = direct
+Direct = direct, ip-version=prefer-v4
+DirectV6 = direct, ip-version=v6-only
 Reject = reject
 [Proxy Group]
 节点选择 = select,自动选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/Qure/master/IconSet/Color/Proxy.png
