--- a/config/surge带wg，s5回家配置.conf
+++ b/config/surge带wg，s5回家配置.conf
@@ -77,7 +77,8 @@ keyword-filter-type = whitelist
 #block-quic = always-allow
 
 [Proxy]
-Direct = direct
+Direct = direct, ip-version=prefer-v4
+DirectV6 = direct, ip-version=v6-only
 Reject = reject
 #添加wg名字，section-name需要和下面的WireGuard配置名称匹配到，test-url填自己的内网地址，不是虚拟内网IP地址
 🇨🇳 Unraid = wireguard, section-name=unraid, test-url=http://192.168.1.1
