--- a/rule/Clash/PrivateTracker/PrivateTracker.yaml
+++ b/rule/Clash/PrivateTracker/PrivateTracker.yaml
@@ -542,3 +542,8 @@ payload:
   - DOMAIN-SUFFIX,cangbao.ge
   - DOMAIN-SUFFIX,bilibili.download
   - DOMAIN,pt.aling.de
+  - DOMAIN,pt.luckpt.de
+  - DOMAIN-SUFFIX,13city.org
+  - DOMAIN-SUFFIX,duckboobee.org
+  - DOMAIN-SUFFIX,tokyopt.xyz
+  - DOMAIN-SUFFIX,tokyopt.xyz
