--- a/rule/Clash/Usenet/Usenet.yaml
+++ b/rule/Clash/Usenet/Usenet.yaml
@@ -18,3 +18,5 @@ payload:
   - DOMAIN-SUFFIX,highwinds-media.com
   - DOMAIN-SUFFIX,ccp.ovh 
   - DOMAIN-SUFFIX,tweaknews.eu
+  - DOMAIN-SUFFIX,easynews.com
+  - DOMAIN-SUFFIX,tweaknews.eu
