--- a/rule/Clash/AI/AI.yaml
+++ b/rule/Clash/AI/AI.yaml
@@ -92,3 +92,4 @@ payload:
   - DOMAIN,apihub.googleapis.com
   - DOMAIN,lh3.googleusercontent.com
   - DOMAIN,lh5.googleusercontent.com
+  - DOMAIN,play.googleapis.com
