--- a/rule/Clash/Crypto/Crypto.yaml
+++ b/rule/Clash/Crypto/Crypto.yaml
@@ -1,8 +1,7 @@
-# NAME: Web3
+# NAME: Crypto
 # AUTHOR: laoban
 # REPO: https://github.com/laobanbiefangcu/ios_rule_script
 # UPDATED: 2025-12-28 14:08:00
-# Modified from https://github.com/szkane/ClashRuleSet/blob/main/Clash/Web3.list
 # DOMAIN-SUFFIX: 361
 # DOMAIN-KEYWORD: 65
 # DOMAIN: 5
