--- a/config/shellcrash.yaml
+++ b/config/shellcrash.yaml
@@ -80,10 +80,10 @@ proxy-groups:
 - {name: 📺 环球影视, type: select, proxies: [🚀 节点选择],use: [机场], filter: 🇸🇬|SG|新加坡}
 - {name: 🎙 国外抖音, type: select, proxies: [🚀 节点选择],use: [机场], filter: 🇯🇵|JP|日本|🇺🇸|US|美国}
 - {name: 🗽 谷歌服务, type: select, proxies: [🚀 节点选择],use: [机场], filter: 🇭🇰|HK|香港}
-- {name: 💰 贝宝信用, type: select, proxies: [🚀 节点选择],use: [机场], filter: 🇺🇸|US|美国}
-- {name: ⏬ 测速软件, type: select, proxies: [🎯 全球直连,🚀 节点选择],use: [机场]}
 - {name: 🍏 苹果服务, type: select, proxies: [🎯 全球直连,🚀 节点选择],use: [机场], filter: 🇯🇵|JP|日本}
 - {name: Ⓜ️ 微软服务, type: select, proxies: [🎯 全球直连,🚀 节点选择],use: [机场], filter: 🇯🇵|JP|日本}
+- {name: 💰 金融交易, type: select, proxies: [🚀 节点选择],use: [机场], filter: 🇺🇸|US|美国}
+- {name: ⏬ 测速软件, type: select, proxies: [🎯 全球直连,🚀 节点选择],use: [机场]}
 - {name: 🎮 数字游戏, type: select, proxies: [🎯 全球直连,🚀 节点选择],use: [机场]}
 - {name: 🎯 全球直连, type: select, proxies: [DIRECT, REJECT]}
 - {name: 🛑 全球拦截, type: select, proxies: [DIRECT, REJECT]}
@@ -124,6 +124,7 @@ rule-providers:
     Chromecast: { type: http, behavior: classical, interval: 7200, url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Chromecast/Chromecast.yaml', path: ./Rules/chromecast.yaml }
     Claude: { type: http, behavior: classical, interval: 86400, url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.yaml', path: ./Rules/Claude.yaml }
     Copilot: { type: http, behavior: classical, interval: 86400, url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.yaml', path: ./Rules/Copilot.yaml }
+    Crypto: { type: http, behavior: classical, interval: 86400, url: 'https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Clash/Crypto/Crypto.yaml', path: ./Rules/Crypto.yaml }
     DingTalk: { type: http, behavior: classical, interval: 7200, url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DingTalk/DingTalk.yaml', path: ./Rules/DingTalk.yaml }
     Direct: { type: http, behavior: classical, interval: 7200, url: 'https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Clash/Direct/Direct.yaml', path: ./Rules/Direct.yaml }
     Discord: { type: http, behavior: classical, interval: 7200, url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.yaml', path: ./Rules/Discord.yaml }
@@ -261,7 +262,8 @@ rules:
  - RULE-SET,Rarbg,🚀 节点选择
  - RULE-SET,LastFM,🚀 节点选择
  - RULE-SET,TikTok,🎙 国外抖音
- - RULE-SET,PayPal,💰 贝宝信用
+ - RULE-SET,PayPal,💰 金融交易
+ - RULE-SET,Crypto,💰 金融交易
  - RULE-SET,Apple,🍏 苹果服务
  - RULE-SET,AppStore,🍏 苹果服务
  - RULE-SET,iCloud,🍏 苹果服务
