--- a/config/surge带wg，s5回家配置.conf
+++ b/config/surge带wg，s5回家配置.conf
@@ -100,10 +100,10 @@ Usenet = select,节点选择,全球直连,include-other-group="机场",icon-url=
 环球影视 = select,节点选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/icon/main/Policy-Filter/Netflix.png
 国外抖音 = select,节点选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/icon/main/Policy-Filter/Tiktok.png
 谷歌服务 = select, 节点选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/icon/main/Policy-Filter/Google.png
-贝宝信用 = select, 节点选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/icon/main/Policy-Filter/Paypal.png
-测速软件 = select, 全球直连, 节点选择,自动选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/icon/main/Policy-Filter/Speedtest.png
 苹果服务 = select, 全球直连, 节点选择, 自动选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 微软服务 = select, 全球直连, 节点选择, 自动选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/icon/main/Policy-Filter/Microsoft.png
+金融交易 = select, 节点选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/icon/main/Policy-Filter/Paypal.png
+测速软件 = select, 全球直连, 节点选择,自动选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/icon/main/Policy-Filter/Speedtest.png
 数字游戏 = select, 全球直连, 节点选择, 自动选择,include-other-group="机场",icon-url=https://raw.githubusercontent.com/laobanbiefangcu/icon/main/Policy-Filter/Game.png
 全球直连 = select, DIRECT, REJECT,icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Direct.png
 全球拦截 = select, DIRECT, REJECT,icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Reject.png
@@ -207,7 +207,8 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Sony/Sony.list,数字游戏,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Xbox/Xbox.list,数字游戏,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,测速软件,update-interval=86400
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/PayPal/PayPal.list,贝宝信用,update-interval=86400
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/PayPal/PayPal.list,金融交易,update-interval=86400
+RULE-SET,https://raw.githubusercontent.com/laobanbiefangcu/ios_rule_script/master/rule/Surge/Crypto/Crypto.list,金融交易,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,微软服务,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/MicrosoftEdge/MicrosoftEdge.list,微软服务,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OneDrive/OneDrive.list,微软服务,update-interval=86400
